--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.9.0",
     "nuxt-mdi": "^1.1.1",
+    "nuxt-primevue": "^0.2.2",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "vue": "^3.3.13",
@@ -26,6 +27,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@pinia/nuxt": "^0.5.1",
     "@tiptap/extension-link": "^2.1.14",
     "@tiptap/extension-underline": "^2.1.13",
     "@tiptap/pm": "^2.1.13",
@@ -37,7 +39,11 @@
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.6.5",
     "flowbite": "^2.2.1",
+    "pinia": "^2.1.7",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.47.2",
     "sass": "^1.69.7",
+    "tiptap-text-direction": "^0.3.0",
     "vue-material-design-icons": "^5.2.0",
     "yup": "^1.3.3"
   }
