--- a/package.json
+++ b/package.json
@@ -33,18 +33,18 @@
     "@tiptap/pm": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
     "@tiptap/vue-3": "^2.1.13",
-    "@vee-validate/nuxt": "^4.12.4",
-    "@vee-validate/yup": "^4.12.4",
+  
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.6.5",
+ 
     "flowbite": "^2.2.1",
     "pinia": "^2.1.7",
     "primeicons": "^6.0.1",
     "primevue": "^3.47.2",
     "sass": "^1.69.7",
     "tiptap-text-direction": "^0.3.0",
-    "vue-material-design-icons": "^5.2.0",
-    "yup": "^1.3.3"
+    "vue-material-design-icons": "^5.2.0"
+ 
   }
 }
